# pneuma-world

./: .gitignore  CLAUDE.md  pyproject.toml
.vibe/: state.yaml
.vibe/references/: asset-setup.md  session-2026-04-04.md
docs/: HANDOVER.md
src/pneuma_world/: __init__.py  clock.py  engine.py  events.py  interaction_bus.py  runner.py  server.py  think_cycle.py  tools.py  world_log.py
src/pneuma_world/models/: __init__.py  action.py  event.py  location.py  state.py
src/pneuma_world/scenarios/: __init__.py  loader.py
src/pneuma_world/scenarios/clubroom/: events.yaml  map.yaml
src/pneuma_world/scenarios/clubroom/characters/: aoi.character.yaml  hinata.character.yaml  (+1 more)
src/pneuma_world/scenarios/yurucamp/: map.yaml
tests/world/: test_clock.py  test_clubroom_scenario.py  test_e2e_integration.py  test_engine.py  test_events.py  test_interaction_bus.py  test_mini_action_queue.py  test_runner.py  test_scenarios.py  test_server.py  test_think_cycle.py  test_think_cycle_character_context.py  test_tools.py  test_world_log.py
tests/world/models/: test_action.py  test_location.py  test_state.py
viewer/: package-lock.json  package.json
viewer/public/assets/: clubroom.json
viewer/src/: App.tsx  index.css
viewer/src/bridge/: GameBridge.ts
viewer/src/components/: ChatLog.tsx  StatusBar.tsx  WorldMap.tsx
viewer/src/game/__tests__/: actionQueue.test.ts  pathfinding.test.ts
viewer/src/game/actionQueue/: ActionQueueManager.ts
viewer/src/game/pathfinding/: Pathfinder.ts
viewer/src/game/scenes/: ClubroomScene.ts
viewer/src/hooks/: useWorldSocket.ts
(+3 files in other folders)
