[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pneuma-world"
version = "0.1.0"
description = "Multi-character autonomous world engine"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pneuma-core>=0.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pneuma_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.uv.sources]
pneuma-core = { git = "https://github.com/mizkun/pneuma-core.git" }
